borsh-derive/src/snapshots/borsh_derive__enum_ser__tests__borsh_discriminant_true.snap
---
source: borsh-derive/src/enum_ser.rs
expression: pretty_print_syn_str(&actual).unwrap()
---
impl borsh::ser::BorshSerialize for X {
    fn serialize<W: borsh::__private::maybestd::io::Write>(
        &self,
        writer: &mut W,
    ) -> ::core::result::Result<(), borsh::__private::maybestd::io::Error> {
        let variant_idx: u8 = match self {
            X::A => 0,
            X::B => 20,
            X::C => 20 + 1,
            X::D => 20 + 1 + 1,
            X::E => 10,
            X::F => 10 + 1,
        };
        writer.write_all(&variant_idx.to_le_bytes())?;
        match self {
            X::A => {}
            X::B => {}
            X::C => {}
            X::D => {}
            X::E => {}
            X::F => {}
        }
        Ok(())
    }
}

