borsh-derive/src/snapshots/borsh_derive__enum_ser__tests__borsh_skip_struct_variant_field.snap
---
source: borsh-derive/src/enum_ser.rs
expression: pretty_print_syn_str(&actual).unwrap()
---
impl borsh::ser::BorshSerialize for AB {
    fn serialize<W: borsh::__private::maybestd::io::Write>(
        &self,
        writer: &mut W,
    ) -> ::core::result::Result<(), borsh::__private::maybestd::io::Error> {
        let variant_idx: u8 = match self {
            AB::B { .. } => 0u8,
            AB::NegatedVariant { .. } => 1u8,
        };
        writer.write_all(&variant_idx.to_le_bytes())?;
        match self {
            AB::B { d, .. } => {
                borsh::BorshSerialize::serialize(d, writer)?;
            }
            AB::NegatedVariant { beta, .. } => {
                borsh::BorshSerialize::serialize(beta, writer)?;
            }
        }
        Ok(())
    }
}

