borsh-derive/src/snapshots/borsh_derive__enum_ser__tests__bound_generics.snap
---
source: borsh-derive/src/enum_ser.rs
expression: pretty_print_syn_str(&actual).unwrap()
---
impl<K: Key, V, U> borsh::ser::BorshSerialize for A<K, V, U>
where
    V: Value,
    K: borsh::ser::BorshSerialize,
    V: borsh::ser::BorshSerialize,
    U: borsh::ser::BorshSerialize,
{
    fn serialize<W: borsh::__private::maybestd::io::Write>(
        &self,
        writer: &mut W,
    ) -> ::core::result::Result<(), borsh::__private::maybestd::io::Error> {
        let variant_idx: u8 = match self {
            A::B { .. } => 0u8,
            A::C(..) => 1u8,
        };
        writer.write_all(&variant_idx.to_le_bytes())?;
        match self {
            A::B { x, y, .. } => {
                borsh::BorshSerialize::serialize(x, writer)?;
                borsh::BorshSerialize::serialize(y, writer)?;
            }
            A::C(id0, id1) => {
                borsh::BorshSerialize::serialize(id0, writer)?;
                borsh::BorshSerialize::serialize(id1, writer)?;
            }
        }
        Ok(())
    }
}

